force-app/main/default/objects/OrderItem/fields/colorTheme__c.field-meta.xml
<CustomField>
    <fullName>colorTheme__c</fullName>
    <defaultValue>&apos;Spectacular Sunset&apos;</defaultValue>
    <label>Color Theme</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beautiful Blue</fullName>
            </value>
            <value>
                <fullName>Glorious Green</fullName>
            </value>
            <value>
                <fullName>Pretty Pink</fullName>
            </value>
            <value>
                <fullName>Pleasant Purple</fullName>
            </value>
            <value>
                <fullName>Wonderful White</fullName>
            </value>
            <value>
                <fullName>Rosy Red</fullName>
            </value>
            <value>
                <fullName>Spectacular Sunset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>