force-app/main/default/objects/OrderItem/fields/fragrance__c.field-meta.xml
<CustomField>
    <fullName>fragrance__c</fullName>
    <description>If the bouquet has a fragrance, what does it smell like?</description>
    <inlineHelpText>If the bouquet has a fragrance, what does it smell like?</inlineHelpText>
    <label>Fragrance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>Gardenia</fullName>
            </value>
            <value>
                <fullName>Jasmine</fullName>
            </value>
            <value>
                <fullName>Lilly of the Valley</fullName>
            </value>
            <value>
                <fullName>Rose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>