force-app/main/default/objects/OrderItem/fields/glow__c.field-meta.xml
<CustomField>
    <fullName>glow__c</fullName>
    <label>Glow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Steady Glow</fullName>
            </value>
            <value>
                <fullName>Pulsing Glow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>